--- a/public/asset/css/styles.css
+++ b/public/asset/css/styles.css
@@ -6,7 +6,8 @@
 **********************************
 */
 *,
-*::before, *::after {
+*::before,
+*::after {
   margin: 0;
   padding: 0;
 }
@@ -28,7 +29,11 @@ img {
   max-width: 100%;
 }
 
-a, p, ul, li, label {
+a,
+p,
+ul,
+li,
+label {
   text-decoration: none;
   list-style: none;
   line-height: 1.35rem;
@@ -39,7 +44,12 @@ figcaption {
   display: none;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   line-height: 1.75rem;
 }
 
@@ -209,12 +219,14 @@ footer > p {
 .flex {
   display: flex;
 }
-.flex a, .flex img {
+.flex a,
+.flex img {
   width: 100%;
   margin-right: 1.5vw;
   transition: all ease 0.3s;
 }
-.flex a:hover, .flex img:hover {
+.flex a:hover,
+.flex img:hover {
   background-color: #333;
 }
 
@@ -997,7 +1009,8 @@ div.mangaPage svg:hover {
   */
   div.headdashboard {
     height: 50vh;
-/*
+  }
+  /*
   ***** OUR FAVORITE HOMEPAGE*******
   **********************************
   */
@@ -1089,7 +1102,7 @@ div.mangaPage svg:hover {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: #A2EEFB;
+  background-color: #a2eefb;
   border-radius: 10px;
   outline: 3px solid #ffffff;
   max-width: 600px;
@@ -1102,20 +1115,21 @@ div.mangaPage svg:hover {
   color: #ffffff;
   -webkit-text-stroke: 2px red;
 }
-.formulaire input, .formulaire textarea {
+.formulaire input,
+.formulaire textarea {
   margin: 1%;
   padding: 1%;
   border-radius: 10px;
   border: none;
-  background-color: #F5F5F5;
-  outline: 1px solid #B3B34E;
+  background-color: #f5f5f5;
+  outline: 1px solid #b3b34e;
 }
 .formulaire .button {
   margin: 1%;
   padding: 1%;
   border-radius: 10px;
   border: none;
-  background-color: #FCC8E1;
+  background-color: #fcc8e1;
   color: #ffffff;
   font-family: var(--ff-bangers);
   cursor: pointer;
@@ -1143,7 +1157,8 @@ div.mangaPage svg:hover {
   border-collapse: collapse;
   margin: 20px 0;
 }
-.dashboard th, .dashboard td {
+.dashboard th,
+.dashboard td {
   border: 1px solid #ccc;
   padding: 10px;
   text-align: left;
@@ -1156,7 +1171,7 @@ div.mangaPage svg:hover {
   background-color: #f2f2f2;
 }
 .dashboard .color-button {
-  background-color: #008CBA;
+  background-color: #008cba;
   color: white;
   border: none;
   padding: 8px 12px;
@@ -1195,7 +1210,7 @@ div.mangaPage svg:hover {
   padding: 1%;
   border-radius: 10px;
   border: none;
-  background-color: #FCC8E1;
+  background-color: #fcc8e1;
   color: #0e0e0e;
   font-family: var(--ff-bangers);
   cursor: pointer;
