--- a/public/asset/css/styles.css
+++ b/public/asset/css/styles.css
@@ -1121,6 +1121,50 @@ div.mangaPage svg.liked {
   .manga img {
     width: 40%;
   }
+  /*
+  **********************************
+  ***********MANGA PAGE************
+  **********************************
+  */
+  .mangaPage-frst-section {
+    display: flex;
+    justify-content: center;
+  }
+  .mangaPage-frst-section .mangaPage {
+    width: 60vh;
+    height: 60vh;
+  }
+  .mangaPage-frst-section .summary-desktop {
+    width: 60vh;
+    display: flex;
+    flex-direction: column;
+  }
+  .mangaPage-frst-section .summary-desktop .sum-manga h2 {
+    font-size: 2rem;
+  }
+  .mangaPage-frst-section .summary-desktop .sum-manga P {
+    font-size: 1.5rem;
+  }
+  .mangaPage-frst-section .summary-desktop .char-manga {
+    flex-direction: column;
+    margin: auto;
+  }
+  .mangaPage-scd-section {
+    display: flex;
+  }
+  .mangaPage-scd-section .comm-desktop {
+    flex-direction: column;
+  }
+  .also-liked {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  .also-liked .also-liked-contain {
+    display: flex;
+    justify-content: space-around;
+  }
 }
 @media (min-width: 1440px) {
   /*
