--- a/public/asset/css/styles.scss
+++ b/public/asset/css/styles.scss
@@ -959,6 +959,24 @@ h2 {
 **********************************
 */
 .head-profile {
+  .head-edit-profile {
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+
+    svg {
+      position: absolute;
+      margin: 2vh;
+      right: 0;
+    }
+
+    h2 {
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+  }
   div:first-child {
     width: 100%;
     position: relative;
@@ -983,6 +1001,14 @@ h2 {
       display: flex;
       flex-direction: column;
       align-items: center;
+
+      .change-picture  {
+        color: var(--fc-black);
+        background-color: #F2EBE8;
+        &:hover {
+          background-color: #fcc8e1;
+        }
+      }
 
       img.profile-picture {
         margin-bottom: 2vh;
@@ -1057,6 +1083,31 @@ h2 {
     }
   }
 }
+}
+
+/*
+**********************************
+************UPDATE PROFILE********
+**********************************
+*/
+
+.modify-profile {
+  margin-top: 25vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  input {
+    width: 50%;
+    margin-bottom: 3vh;
+    padding: 5px 10px;
+
+    
+
+  }
+  button {
+    width: 25%;
+  }
 }
 
 /*
