--- a/public/asset/css/styles.scss
+++ b/public/asset/css/styles.scss
@@ -959,11 +959,19 @@ h2 {
 **********************************
 */
 .head-profile {
+  p {
+      font-family: var(--ff-bangers);
+      letter-spacing: var(--letter-spacing);
+      font-size: 1.5rem;
+      margin: 2vh 0;
+    }
   .head-edit-profile {
     position: relative;
     width: 100%;
     display: flex;
     justify-content: space-between;
+
+
 
     svg {
       position: absolute;
@@ -995,7 +1003,7 @@ h2 {
 
     figure {
       position: absolute;
-      bottom: -50%;
+      bottom: -60%;
       right: 50%;
       transform: translateX(50%);
       display: flex;
@@ -1100,13 +1108,39 @@ h2 {
   input {
     width: 50%;
     margin-bottom: 3vh;
+    border-radius: 5px;
     padding: 5px 10px;
+    border: solid 2px #3333339f;
+    font-size: 1.5rem;
+    font-family: var(--ff-barlow);
+    transition: all ease 0.3s;  
+
+    &:focus {
+      outline: none;
+      border: solid 2px #fcc8e1;
+    }
 
     
 
   }
   button {
-    width: 25%;
+    width: 50%;
+    background-color: #fab1d4;
+    font-family: var(--ff-barlow);
+    color: var(--fc-light);
+    font-size: 1.2rem;
+    font-weight: 500;
+    padding: 5px 10px;
+    border: solid 2px rgba(0, 0, 0, 0.774);
+    border-radius: 5px;
+    box-shadow: #0e0e0e 0px 2px 5px;
+      cursor: pointer;
+      transition: all ease 0.3s;
+
+      &:hover {
+        background-color: #fc90c4;
+        box-shadow: none;
+      }
   }
 }
 
