--- a/public/asset/css/styles.scss
+++ b/public/asset/css/styles.scss
@@ -1152,6 +1152,9 @@ h2 {
 **********************************
 */
 
+.update-user-desktop{
+  display: none;
+}
 .modify-profile {
   margin-top: 25vh;
   display: flex;
@@ -1177,6 +1180,7 @@ h2 {
 
   }
   button {
+    margin-bottom: 5vh;
     width: 50%;
     background-color: #fab1d4;
     font-family: var(--ff-barlow);
@@ -1187,8 +1191,8 @@ h2 {
     border: solid 2px rgba(0, 0, 0, 0.774);
     border-radius: 5px;
     box-shadow: #0e0e0e 0px 2px 5px;
-      cursor: pointer;
-      transition: all ease 0.3s;
+    cursor: pointer;
+    transition: all ease 0.3s;
 
       &:hover {
         background-color: #fc90c4;
@@ -1196,6 +1200,37 @@ h2 {
       }
   }
 }
+
+.modal {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.modal-content {
+    text-align: center;
+}
+
+button {
+    margin-top: 10px;
+    padding: 8px 12px;
+    border: none;
+    background-color: #333;
+    color: white;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+button:hover {
+    background-color: #555;
+}
+
 
 /*
 **********************************
@@ -1438,7 +1473,6 @@ h2 {
 
   /*
 **********************************
-
 ***********DASHBOARD************
 **********************************
 */
@@ -1557,6 +1591,24 @@ justify-content: space-around;
 }
 }
 
+  /*
+**********************************
+***********UPDATE USER************
+**********************************
+*/
+
+.update-user-desktop {
+  display: block;
+background-color: #008cba;
+
+figure {
+  display: flex;
+  justify-content: center;
+  img {
+
+  }
+}
+}
 
 }
 
