--- a/public/asset/css/styles.scss
+++ b/public/asset/css/styles.scss
@@ -1234,6 +1234,29 @@ button:hover {
 
 /*
 **********************************
+*********CURRENT STORIES************
+**********************************
+*/
+
+.bann-setting {
+  display: flex;
+  align-items: center;
+  background-color: #cc392b;
+  padding: 20px 5px;
+
+  a {
+    color: var(--fc-black);
+    font-family: var(--ff-bangers);
+    letter-spacing: var(--letter-spacing);
+    transition: all ease 0.3s;
+    &:hover {
+      color: #333;
+    }
+  }
+}
+
+/*
+**********************************
 *********MEDIA QUERIES************
 **********************************
 */
