--- a/public/asset/css/styles.scss
+++ b/public/asset/css/styles.scss
@@ -1018,6 +1018,26 @@ div.mangaPage {
   .formulaire {
     margin: 0 auto;
   }
+
+  /*
+*******************************
+***********kakoii mode***********
+*******************************
+*/
+.formkakoii{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.headkakkoii {
+width: 100%;
+}
+.kakkoii{
+    width: 70vh; 
+
+  }
+
 }
 
 @media (min-width: 1024px) {
@@ -1169,7 +1189,6 @@ div.mangaPage {
 
   /*
 **********************************
-
 ***********DASHBOARD************
 **********************************
 */
@@ -1228,6 +1247,29 @@ div.mangaPage {
     img {
       width: 40%;
     }
+  }
+    /*
+*******************************
+***********kakoii mode***********
+*******************************
+*/
+.formkakoii{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.headkakkoii {
+width: 100%;
+}
+.kakkoii{
+    width: 70vh; 
+
+    .flex{
+      display: flex;
+      flex-direction: row;
+    }
+
   }
 }
 
@@ -1439,6 +1481,20 @@ div.mangaPage {
   .overlay.active {
     display: block; /* Afficher lorsque actif */
   }
+
+      /*
+*******************************
+***********kakoii mode***********
+*******************************
+*/
+.kakkoii{
+  center {
+    max-width: 600px; /* Réduire la largeur maximale */
+    padding: 20px; /* Ajuster le padding si nécessaire */
+    margin: 20px auto; /* Centrer les éléments */
+    background-color: #cc1606;
+  }
+  }
 }
 
 /*
@@ -1450,6 +1506,7 @@ div.mangaPage {
 .headkakkoii{
   height: 30vh;
   background: url(../img/kakoii.svg) no-repeat center center/cover;
+  width: 100%;
  
 }
 .kakkoii{
@@ -1512,3 +1569,407 @@ align-items: center;
 }
   }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*
+**********************************
+***********KAKOII MODE************
+**********************************
+*/
+
+.kakkoii{
+  
+  .popup {
+  display: none; /* Masquer par défaut */
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border: 2px solid #ffffff;
+  padding: 20px;
+  background-color: #ffffff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+  border-radius: 10px;
+}
+
+.overlay {
+  display: none; /* Masquer par défaut */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+}
+
+.popup.active,
+.overlay.active {
+  display: block; /* Afficher lorsque actif */
+}
+.flex{
+  display: flex;
+  flex-direction: column;
+}
+h2{
+  font-family: var(--ff-bangers);
+  letter-spacing: var(--letter-spacing);
+  font-size: 1rem;
+  color: #fa0707;
+  
+}
+.open-popup{
+  background-color: #fcc8e1;
+  color: #0e0e0e;
+  font-family: var(--ff-bangers);
+  cursor: pointer;
+}
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
