:fire: Add past chronicle feature and enhance SVG transition effects :fire:

--- a/public/asset/css/styles.css
+++ b/public/asset/css/styles.css
@@ -79,6 +79,10 @@ h6 {
 ***********GENERAL STYLING************
 **********************************
 */
+svg {
+  transition: transform 0.3s ease;
+}
+
 .p-all-2 {
   padding: 1vw;
 }
