--- a/public/asset/css/styles.scss
+++ b/public/asset/css/styles.scss
@@ -84,6 +84,10 @@ h6 {
 ***********GENERAL STYLING************
 **********************************
 */
+
+svg {
+  transition: transform 0.3s ease;
+}
 .p-all-2 {
   padding: 1vw;
 }
