--- a/public/asset/css/styles.scss
+++ b/public/asset/css/styles.scss
@@ -85,6 +85,69 @@ h6 {
 **********************************
 */
 
+/* Style par défaut */
+body {
+  transition: background-color 0.3s, color 0.3s;
+}
+
+body.dark-mode {
+  background-color: #202024;
+  color: white;
+  .category-slider .category-title a {
+    margin: 8% 3%;
+    font-family: var(--ff-barlow);
+    color: var(--fc-white);
+    border: #ffffff 1px solid;
+    padding: 5px 10px;
+    transition: all ease 0.3s;
+    &:hover{
+      color: #cc392b;
+      border: #cc392b 1px solid;
+    }
+}
+
+.logo-footer img {
+  content: url(../img/logo_footer.svg);
+}
+.logo img {
+content: url(../img/logo_dark_theme.svg);
+}
+
+.logoo img {
+content: url(../img/logo_dark_theme.svg);
+width: 15vh;
+}
+
+.loup{
+  content: url(../img/search_sark_theme.svg);
+}
+
+.menu-desktop .profile .dropdown{
+  background-color: #38383f;
+
+  a{
+    width: 100%;
+    color: white;
+  }
+  li {
+
+    transition: all 0.3s ease;
+    &:hover {
+      background-color: #cc392b;
+    }
+  }
+}
+}
+
+.mode-icon {
+  transition: transform 0.3s ease-in-out;
+}
+
+body.dark-mode .mode-icon {
+  transform: rotate(180deg);
+}
+
+
 svg {
   transition: transform 0.3s ease;
 }
