--- a/public/asset/css/styles.css
+++ b/public/asset/css/styles.css
@@ -79,7 +79,6 @@ h6 {
 ***********GENERAL STYLING************
 **********************************
 */
-/* Style par défaut */
 body {
   transition: background-color 0.3s, color 0.3s;
 }
@@ -87,6 +86,28 @@ body {
 body.dark-mode {
   background-color: #202024;
   color: white;
+}
+body.dark-mode .hero_category_txt {
+  color: var(--fc-black);
+}
+body.dark-mode input {
+  background-color: #ccc;
+}
+body.dark-mode .general-profile h3 {
+  color: white;
+}
+body.dark-mode .chevron-current svg path {
+  stroke: white;
+}
+body.dark-mode .current-info div a {
+  color: white;
+}
+body.dark-mode .copyright a {
+  color: white;
+  transition: all ease 0.3s;
+}
+body.dark-mode .copyright a:hover {
+  color: #cc392b;
 }
 body.dark-mode .category-slider .category-title a {
   margin: 8% 3%;
@@ -276,18 +297,20 @@ footer > p {
   padding: 0 20px;
 }
 
-.flex {
+.resaux-sociaux {
   display: flex;
 }
-.flex a,
-.flex img {
+.resaux-sociaux a {
   width: 100%;
-  margin-right: 1.5vw;
+}
+.resaux-sociaux a svg {
+  width: 5vh;
+  height: 5vh;
+  margin-right: 1vw;
   transition: all ease 0.3s;
 }
-.flex a:hover,
-.flex img:hover {
-  background-color: #333;
+.resaux-sociaux a svg:hover path {
+  fill: #cc392b;
 }
 
 .flex1 {
