--- a/public/asset/css/styles.scss
+++ b/public/asset/css/styles.scss
@@ -85,7 +85,6 @@ h6 {
 **********************************
 */
 
-/* Style par défaut */
 body {
   transition: background-color 0.3s, color 0.3s;
 }
@@ -93,6 +92,50 @@ body {
 body.dark-mode {
   background-color: #202024;
   color: white;
+
+  .hero_category_txt {
+    color:var(--fc-black);
+  }
+
+  input {
+    background-color: #ccc;
+  }
+
+  .general-profile {
+    h3 {
+      color: white;
+    }
+  }
+
+  .chevron-current {
+    svg {
+      path {
+        stroke: white;
+      }
+    }
+  }
+
+  .current-info {
+
+    div{
+          a{
+      color: white;
+    }
+    }
+
+    
+  }
+
+  .copyright{
+    a {
+      color: white;
+      transition: all ease 0.3s;
+
+      &:hover {
+        color: #cc392b;
+      }
+    }
+  }
   .category-slider .category-title a {
     margin: 8% 3%;
     font-family: var(--ff-barlow);
@@ -298,18 +341,23 @@ footer > p {
   margin-bottom: 1%;
   padding: 0 20px;
 }
-.flex {
+.resaux-sociaux {
   display: flex;
 
-  a,
-  img {
+  a {
     width: 100%;
-    margin-right: 1.5vw;
+      svg {
+    width: 5vh;
+    height: 5vh;
+    margin-right: 1vw;
     transition: all ease 0.3s;
 
     &:hover {
-      background-color: #333;
+      path {
+        fill: #cc392b;
+      }
     }
+  }
   }
 }
 .flex1 {
